--- a/index.html
+++ b/index.html
@@ -47,8 +47,25 @@
         <div class="popular-card">
             <div class="card">
                 <img src="images/tripod.png" alt="">
-                <h3>FLEX TRIPOD</h3>
-                <h4>$50.48</h4>
+                <h3>Flex Tripod</h3>
+                <h4>$560.48</h4>
+                <div class="stars">
+                    <ul class="star">
+                        <li><img src="images/star.png" alt="star"></li>
+                        <li><img src="images/star.png" alt="star"></li>
+                        <li><img src="images/star.png" alt="star"></li>
+                        <li><img src="images/star.png" alt="star"></li>
+                        <li><img src="images/star.png" alt="star"></li>
+                    </ul>
+                    <h4>400.80</h4>
+                </div>
+                <p>Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+             <div class="card">
+                <img src="images/mic.png" alt="">
+                <h3>microphone</h3>
+                <h4>$1655.48</h4>
                 <div class="stars">
                     <ul class="star">
                         <li><img src="images/star.png" alt="star"></li>
@@ -63,9 +80,26 @@
                     Buyers protection possible!</p>
             </div>
              <div class="card">
-                <img src="images/tripod.png" alt="">
-                <h3>FLEX TRIPOD</h3>
-                <h4>$50.48</h4>
+                <img src="images/airpod.png" alt="">
+                <h3>Airbuds</h3>
+                <h4>$1400.00</h4>
+                <div class="stars">
+                    <ul class="star">
+                        <li><img src="images/star.png" alt="star"></li>
+                        <li><img src="images/star.png" alt="star"></li>
+                        <li><img src="images/star.png" alt="star"></li>
+                        <li><img src="images/star.png" alt="star"></li>
+                        <li><img src="images/star.png" alt="star"></li>
+                    </ul>
+                    <h4>47.89</h4>
+                </div>
+                <p>Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+             <div class="card">
+                <img src="images/drone.png" alt="">
+                <h3>Drone</h3>
+                <h4>$3450.48</h4>
                 <div class="stars">
                     <ul class="star">
                         <li><img src="images/star.png" alt="star"></li>
@@ -80,9 +114,9 @@
                     Buyers protection possible!</p>
             </div>
              <div class="card">
-                <img src="images/tripod.png" alt="">
-                <h3>FLEX TRIPOD</h3>
-                <h4>$50.48</h4>
+                <img src="images/lights.png" alt="">
+                <h3>Light Setup</h3>
+                <h4>$2360.48</h4>
                 <div class="stars">
                     <ul class="star">
                         <li><img src="images/star.png" alt="star"></li>
@@ -91,15 +125,15 @@
                         <li><img src="images/star.png" alt="star"></li>
                         <li><img src="images/star.png" alt="star"></li>
                     </ul>
-                    <h4>4.99</h4>
+                    <h4>100.950</h4>
                 </div>
                 <p>Wordwide shifting available
                     Buyers protection possible!</p>
             </div>
              <div class="card">
-                <img src="images/tripod.png" alt="">
-                <h3>FLEX TRIPOD</h3>
-                <h4>$50.48</h4>
+                <img src="images/setup.png" alt="">
+                <h3>Photoshoot Set</h3>
+                <h4>$1200.48</h4>
                 <div class="stars">
                     <ul class="star">
                         <li><img src="images/star.png" alt="star"></li>
@@ -108,15 +142,15 @@
                         <li><img src="images/star.png" alt="star"></li>
                         <li><img src="images/star.png" alt="star"></li>
                     </ul>
-                    <h4>4.99</h4>
+                    <h4>546.39</h4>
                 </div>
                 <p>Wordwide shifting available
                     Buyers protection possible!</p>
             </div>
              <div class="card">
-                <img src="images/tripod.png" alt="">
-                <h3>FLEX TRIPOD</h3>
-                <h4>$50.48</h4>
+                <img src="images/camera.png" alt="">
+                <h3>Vlogging Camera</h3>
+                <h4>$506.48</h4>
                 <div class="stars">
                     <ul class="star">
                         <li><img src="images/star.png" alt="star"></li>
@@ -125,15 +159,15 @@
                         <li><img src="images/star.png" alt="star"></li>
                         <li><img src="images/star.png" alt="star"></li>
                     </ul>
-                    <h4>4.99</h4>
+                    <h4>66.99</h4>
                 </div>
                 <p>Wordwide shifting available
                     Buyers protection possible!</p>
             </div>
              <div class="card">
-                <img src="images/tripod.png" alt="">
-                <h3>FLEX TRIPOD</h3>
-                <h4>$50.48</h4>
+                <img src="images/single-light.png" alt="">
+                <h3>Green Screen</h3>
+                <h4>$750.48</h4>
                 <div class="stars">
                     <ul class="star">
                         <li><img src="images/star.png" alt="star"></li>
@@ -142,15 +176,15 @@
                         <li><img src="images/star.png" alt="star"></li>
                         <li><img src="images/star.png" alt="star"></li>
                     </ul>
-                    <h4>4.99</h4>
+                    <h4>54.99</h4>
                 </div>
                 <p>Wordwide shifting available
                     Buyers protection possible!</p>
             </div>
              <div class="card">
-                <img src="images/tripod.png" alt="">
-                <h3>FLEX TRIPOD</h3>
-                <h4>$50.48</h4>
+                <img src="images/action.png" alt="">
+                <h3>Action Camera</h3>
+                <h4>$480.60</h4>
                 <div class="stars">
                     <ul class="star">
                         <li><img src="images/star.png" alt="star"></li>
@@ -159,41 +193,7 @@
                         <li><img src="images/star.png" alt="star"></li>
                         <li><img src="images/star.png" alt="star"></li>
                     </ul>
-                    <h4>4.99</h4>
-                </div>
-                <p>Wordwide shifting available
-                    Buyers protection possible!</p>
-            </div>
-             <div class="card">
-                <img src="images/tripod.png" alt="">
-                <h3>FLEX TRIPOD</h3>
-                <h4>$50.48</h4>
-                <div class="stars">
-                    <ul class="star">
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                    </ul>
-                    <h4>4.99</h4>
-                </div>
-                <p>Wordwide shifting available
-                    Buyers protection possible!</p>
-            </div>
-             <div class="card">
-                <img src="images/tripod.png" alt="">
-                <h3>FLEX TRIPOD</h3>
-                <h4>$50.48</h4>
-                <div class="stars">
-                    <ul class="star">
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                    </ul>
-                    <h4>4.99</h4>
+                    <h4>74.99</h4>
                 </div>
                 <p>Wordwide shifting available
                     Buyers protection possible!</p>
