--- a/index.html
+++ b/index.html
@@ -201,5 +201,25 @@
             
         </div>
     </section>
+    <a class="arrow">See More --></a>
+    <section class="feature">
+        <img src="images/gear.png" alt="">
+        <div class="feature-right">
+            <h3>Feature Products at one place</h3>
+            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <button class="btn">Join Now</button>
+        </div>  
+    </section>
+    <footer>
+            <h3>Influencer products</h3>
+            <p>Copyright © 2020  influencer products</p>
+            <p>All rights reserved</p>
+            <ul class="footer-logo">
+                <li><img src="images/instagram.png" alt=""></li>
+                <li><img src="images/internet.png" alt=""></li>
+                <li><img src="images/twitter.png" alt=""></li>
+                <li><img src="images/youtube.png" alt=""></li>
+            </ul>
+        </footer>
 </body>
 </html>
