--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
+    <script src="https://kit.fontawesome.com/39bcabd2c7.js" crossorigin="anonymous"></script>
     <title>Influencer-gear</title>
 </head>
 <body class="poppins-font ">
@@ -25,7 +26,7 @@
         <div class="cam-left">
             <h2>Start your Journey as Influencer</h2>
             <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</h5>
-            <button class="btn">Preebook now</button>
+            <button class="btn">Preebook now <i class="fa-solid fa-arrow-right"></i></button>
         </div>
         <div class="cam-right">
             <img src="images/main-camera.png" alt="">
@@ -51,11 +52,11 @@
                 <h4>$560.48</h4>
                 <div class="stars">
                     <ul class="star">
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <!-- <li><i class="fa-solid fa-star-half-stroke"></i></li> -->
                     </ul>
                     <h4>400.80</h4>
                 </div>
@@ -68,11 +69,11 @@
                 <h4>$1655.48</h4>
                 <div class="stars">
                     <ul class="star">
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star-half-stroke"></i></li>
                     </ul>
                     <h4>4.99</h4>
                 </div>
@@ -85,11 +86,11 @@
                 <h4>$1400.00</h4>
                 <div class="stars">
                     <ul class="star">
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star-half-stroke"></i></li>
                     </ul>
                     <h4>47.89</h4>
                 </div>
@@ -102,11 +103,11 @@
                 <h4>$3450.48</h4>
                 <div class="stars">
                     <ul class="star">
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star-half-stroke"></i></li>
                     </ul>
                     <h4>4.99</h4>
                 </div>
@@ -119,11 +120,11 @@
                 <h4>$2360.48</h4>
                 <div class="stars">
                     <ul class="star">
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star-half-stroke"></i></li>
                     </ul>
                     <h4>100.950</h4>
                 </div>
@@ -136,11 +137,11 @@
                 <h4>$1200.48</h4>
                 <div class="stars">
                     <ul class="star">
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
+                       <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star-half-stroke"></i></li>
                     </ul>
                     <h4>546.39</h4>
                 </div>
@@ -153,11 +154,11 @@
                 <h4>$506.48</h4>
                 <div class="stars">
                     <ul class="star">
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star-half-stroke"></i></li>
                     </ul>
                     <h4>66.99</h4>
                 </div>
@@ -170,11 +171,11 @@
                 <h4>$750.48</h4>
                 <div class="stars">
                     <ul class="star">
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star-half-stroke"></i></li>
                     </ul>
                     <h4>54.99</h4>
                 </div>
@@ -187,11 +188,11 @@
                 <h4>$480.60</h4>
                 <div class="stars">
                     <ul class="star">
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
-                        <li><img src="images/star.png" alt="star"></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star-half-stroke"></i></li>
                     </ul>
                     <h4>74.99</h4>
                 </div>
@@ -201,13 +202,13 @@
             
         </div>
     </section>
-    <a class="arrow">See More --></a>
+    <a class="arrow">See More <i class="fa-solid fa-arrow-right"></i></a>
     <section class="feature">
         <img src="images/gear.png" alt="">
         <div class="feature-right">
             <h3>Feature Products at one place</h3>
             <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-            <button class="btn">Join Now</button>
+            <button class="btn">Join Now <i class="fa-solid fa-arrow-right"></i></button>
         </div>  
     </section>
     <footer>
